--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<h1>Kirill</h1>
+	<h2>Malinka</h2>
+	<h3>21.12.2005 </h3>
+	<h4>37</h4> 
+	<h5>KI</h5>
+	<h6> ХДПК </h6>
+	<p>Моя улюблена цитата</p> 
+	<h1>Мне нравится фильм боевик</h1>
+	<ol>
+		<li>......</li>
+		<li>......</li>
+		<li>......</li>
+	</ol>
+	<h1>Розклад занять на день тиждня</h1>
+	<ul>
+		<li>......</li>
+		<li>......</li>
+		<li>......</li>
+	</ul>
+	<img src="html5.png" alt="">
+	<br>
+	<br>
+	<input type="" name="">
+	<br>
+	<br>
+	<button>OK</button> 
+	<br>
+	<br>
+	<table>
+		<tr>
+			<th>Заголовок1</th><th>3аголовок2</th><th>3аголовок3</th><th>4</th>
+		</tr> 
+		<tr>
+			<td>Комірка1</td><td>Комірка2</td><td>Комірка3</td><td>Комірка4</td>
+		</tr>
+		<tr> 
+			<td>Комірка5</td><td>Комірка6</td><td>Комірка7</td><td>Комірка8</td>
+		</tr> 
+	</table>
+	<br>
+	<a href="https://oksanazadara.github.io/webtech/">https://github.com/Kirill867853/laba-1.git</a>
 </body>
 </html>
