--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 	<h5>KI</h5>
 	<h6> ХДПК </h6>
 	<p>Моя улюблена цитата</p> 
-	<h1>Мне нравится фильм боевик</h1>
+	<h1>Мне нравится фильмы </h1>
 	<ol>
-		<li>......</li>
-		<li>......</li>
-		<li>......</li>
+		<li>Достать ножи</li>
+		<li>Форд против Феррари</li>
 	</ol>
 	<h1>Розклад занять на день тиждня</h1>
 	<ul>
-		<li>......</li>
-		<li>......</li>
-		<li>......</li>
+		<li>Математика </li>
+		<li>Физика</li>
+		<li>Физькультура</li>
 	</ul>
 	<img src="html5.png" alt="">
 	<br>
