--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<br>
 	<table>
 		<tr>
-			<th>Заголовок1</th><th>3аголовок2</th><th>3аголовок3</th><th>4</th>
+			<th>Заголовок1</th><th>3аголовок2</th><th>3аголовок3</th><th>Заголовок4</th>
 		</tr> 
 		<tr>
 			<td>Комірка1</td><td>Комірка2</td><td>Комірка3</td><td>Комірка4</td>
